[package]
name = "river-luatile"
description = "Write your own river layout generator in lua "
repository = "https://github.com/MaxVerevkin/river-luatile"
readme = "../README.md"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["MaxVerevkin <maxxverrr@gmail.com>"]

[dependencies]
log = "0.4"
env_logger = "0.9"
dirs-next = "2.0"
mlua = { version = "0.8", features = ["luajit"] }
river-layout-toolkit = { git = "https://github.com/MaxVerevkin/river-layout-toolkit", rev = "96fb8f7ed8b60221428b30313e866797cf3be06a" }

[profile.release]
lto = "fat"
strip = true
