[package]
name = "river-luatile"
description = "Write your own river layout generator in lua"
repository = "https://github.com/MaxVerevkin/river-luatile"
readme = "../README.md"
version = "0.1.1"
edition = "2021"
license = "GPL-3.0-only"
authors = ["MaxVerevkin <maxxverrr@gmail.com>"]

[dependencies]
log = "0.4"
env_logger = "0.10"
dirs-next = "2.0"
mlua = { version = "0.8", features = ["luajit"] }
river-layout-toolkit = "0.1"

[profile.release]
lto = "fat"
strip = true
